# tachi-remote

./: .gitignore  Cargo.toml  LICENSE  README.md  example-info.toml
gen-manga/: Cargo.toml
gen-manga/src/: main.rs
src/: args.rs  load.rs  main.rs  server.rs
